통기도 수정

--- a/WindowsFormsApp1/사주명리.csproj
+++ b/WindowsFormsApp1/사주명리.csproj
@@ -185,5 +185,8 @@
   <ItemGroup>
     <None Include="media\tongi_raw.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="media\tongi_1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
